workloads/n8n/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
spec:
  entryPoints:
    - websecure-internal
  routes:
    - match: Host(`n8n.home.drewdevlab.com`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
  tls: {}
